--- a/style.css
+++ b/style.css
@@ -45,8 +45,28 @@ button:hover {
     background-color: #555;
 }
 
-#nome {
+#ulExc3 {
+    align-items: center;
+    background-color: #ffffff;
+    padding: 15px;
+    margin: 5%;
+}
+
+#subLi1, #subLi2, #subLi3{
+    display: none;
+    background-color: #b3b3b3;
+    padding: 15px;
+}
+
+#nome1 {
     background-color: rgb(49, 49, 48);
     color: rgb(255, 255, 255);
     text-align: center;
+}
+
+#pr1, #pr2, #pr3 {
+
+    font-size: 15px;
+    color: rgb(128, 15, 15);
+
 }
